apps/base/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: apps
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.4
          volumeMounts:
            - name: vaultwarden-pvc-longhorn
              mountPath: /data
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: vaultwarden-pvc-longhorn
          persistentVolumeClaim:
            claimName: vaultwarden-pvc-longhorn-bk
