apps/base/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-service
  namespace: apps
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
