apps/base/vaultwarden/ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress
  namespace: apps
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`vaultwarden.ysonsuperhomelab.com`)
      kind: Rule
      services:
        - name: vaultwarden-service
          port: 80
  tls:
      secretName: vaultwarden-certificate-secret
